--- a/app/templates/skeleton/package.json
+++ b/app/templates/skeleton/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "<%= _.camelize(appname) %>",
+  "name": "<%= _s.camelize(appname) %>",
   "scripts": {
     "start": "webpack-dev-server",
     "test": "karma start --singleRun",
@@ -18,14 +18,9 @@
     "moment": "^2.14.1"
   },
   "devDependencies": {
-    "angular-mocks": "^1.5.8",
-    "babel-core": "^6.11.4",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",    
+    "angular-mocks": "^1.5.8",  
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.23.1",
-    "eslint": "^3.1.1",
-    "eslint-loader": "^1.4.1",
     "file-loader": "^0.9.0",
     "html-loader": "^0.4.3",
     "jasmine-core": "^2.4.1",
@@ -41,6 +36,8 @@
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.1"
+    "webpack": "^1.13.1",
+    "ts-loader": "^0.8.2",
+    "typescript": "^1.8.10"    
   }
 }
