--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "test": "mocha"
   },
   "dependencies": {
+    "chalk": "~0.4.0",
+    "html-wiring": "^1.2.0",
+    "ng-parse-module": "~2.0.0",
+    "typescript": "^1.8.10",
     "underscore": "~1.5",
     "underscore.string": "~2.3",
-    "yeoman-generator": "~0.16",
-    "chalk": "~0.4.0",
-    "ng-parse-module": "~2.0.0"
+    "yeoman-generator": "^0.24.1"
   },
   "devDependencies": {
     "mocha": "~1.10.0"
